# paladin

./: .clang-format  .travis.yml  CMakeLists.txt  LICENSE  PaladinConfig.cmake.in  PaladinConfigure.h.in  README.md  get_mpich.sh
postprocessing/: load-decomposition.py  plot-spectrum.py  setup.py
postprocessing/example-data/: matrix  matrix.leftvecs  matrix.rightvecs  matrix.spectrum
postprocessing/pypp/: pypp.py
src/: CMakeLists.txt  command-line-parser.hpp  compute-and-show-timings.cpp  compute-write-with-timings.cpp  header.hpp  lapack-wrapper.hpp  make-unique.hpp  measure-util.hpp  mpi-util.hpp  mpicomm.hpp  paladin-configure.h.in  paladin.cpp  paladin.hpp  spectrum-util.hpp  square-matrix.hpp  types.hpp
test/: CMakeLists.txt  compare_spectra.cmake  compute-and-write-eigenvalues.cpp
test/canonical-2x2/: listing1  listing2  nonsymmetric-complex.matrix.leftvecs.exact  nonsymmetric-complex.matrix.rightvecs.exact  nonsymmetric-complex.matrix.spectrum.exact  nonsymmetric-imag.matrix.leftvecs.exact  nonsymmetric-imag.matrix.spectrum.exact  nonsymmetric-real.matrix  nonsymmetric-real.matrix.leftvecs.exact  nonsymmetric-real.matrix.rightvecs.exact  nonsymmetric-real.matrix.spectrum.exact
test/combustion/: coh2-davis-ns14mmarket.matrix  coh2-davis-ns14mmarket.matrix.gold  h2-burke-ns11mmarket.matrix  h2-burke-ns11mmarket.matrix.gold  heptane-wang-ns76mmarket.matrix  heptane-wang-ns76mmarket.matrix.gold  listing  listing2  methane-kazakov21-ns21mmarket.matrix  methane-kazakov21-ns21mmarket.matrix.gold  methanol-zabetta-ns60mmarket.matrix  methanol-zabetta-ns60mmarket.matrix.gold
test/identity-matrix/: 10x10.listing1  10x10.listing10  10x10.listing2  10x10.matrix  10x10.matrix.leftvecs.exact  10x10.matrix.rightvecs.exact
test/multiple-matrices/: listing  nonsymmetric-complex.matrix  nonsymmetric-imag.matrix  nonsymmetric-imag.matrix.leftvecs.exact  nonsymmetric-real.matrix.leftvecs.exact  nonsymmetric-real.matrix.rightvecs.exact  symmetric-real.matrix  symmetric-real.matrix.leftvecs.exact  symmetric-real.matrix.rightvecs.exact
